Fixes for Tomcat Ubuntu bug, add ONBUILD requirement for tomcat-setenv.sh in context to set Tomcat environment for images based off this image.